--- a/views/menu.xml
+++ b/views/menu.xml
@@ -1,20 +1,35 @@
 <odoo>
     <data>
 
-        <record id="purchase_action_view" model="ir.actions.act_window">
-            <field name="name">Purchase Order</field>
-            <field name="type">ir.actions.act_window</field>
-            <field name="res_model">purchase.order</field>
-            <field name="view_mode">tree,form</field>
-        </record>
-        <record id="sale_action_view" model="ir.actions.act_window">
-            <field name="name">Sale Order</field>
-            <field name="type">ir.actions.act_window</field>
-            <field name="res_model">sale.order</field>
-            <field name="view_mode">tree,form</field>
-        </record>
-        <menuitem id="retail_menu_root" name="Retail" />
-        <menuitem id="sale_menu" name="Sale" parent="retail_menu_root" action="sale_action_view"/>
-        <menuitem id="purchase_menu" name="Purchase" parent="retail_menu_root" action="purchase_action_view"/>
+        <menuitem id="retail_menu_root" name="Retail"/>
+
+        <menuitem id="stock_menu" name="Stock" parent="retail_menu_root" sequence="1"/>
+        <menuitem id="warehouse_menu" name="Warehouse" parent="stock_menu" sequence="1" action="action_warehouse_form"/>
+        <menuitem id="products" name="Products" parent="stock_menu" sequence="2"
+                  action="product_template_action_product"/>
+        <menuitem id="product_category" name="Product Category" parent="stock_menu" sequence="3"
+                  action="product_category_action_form"/>
+
+        <menuitem id="purchase_menu" name="Purchase" parent="retail_menu_root" sequence="2"/>
+        <menuitem id="purchase_orders" name="Purchase Orders" parent="purchase_menu" sequence="1"
+                  action="purchase_action_view"/>
+        <menuitem id="purchase_payment" name="Purchase Orders Payment" parent="purchase_menu" sequence="2"
+                  action="action_move_in_receipt_type"/>
+        <menuitem id="vendor_pricelist" name="Vendor PriceList" parent="purchase_menu" sequence="3"
+                  action="product_supplierinfo_type_action"/>
+
+        <menuitem id="sale_menu" name="Sale" parent="retail_menu_root" sequence="3"/>
+        <menuitem id="sale_orders" name="Sales Orders" parent="sale_menu" sequence="1" action="sale_action_view"/>
+        <menuitem id="sale_payment" name="Sales Orders Payment" parent="sale_menu" sequence="2"
+                  action="action_move_out_receipt_type"/>
+        <menuitem id="sale_pricelist" name="Sales PriceList" parent="sale_menu" sequence="3"
+                  action="product_pricelist_action2"/>
+
+
+        <!--        <menuitem id="payment_menu" name="Payment" parent="retail_menu_root" sequence="4"/>-->
+        <!--        <menuitem id="payment" name="Payments" parent="payment_menu" sequence="1"/>-->
+        <!--        <menuitem id="sale_payment" name="Purchase Orders Payment" parent="sale_menu" sequence="2"/>-->
+
+
     </data>
 </odoo>
