--- a/views/sale.xml
+++ b/views/sale.xml
@@ -1,5 +1,33 @@
 <odoo>
     <data>
+        <!--orders-->
+        <record id="sale_action_view" model="ir.actions.act_window">
+            <field name="name">Sale Order</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">sale.order</field>
+            <field name="view_mode">tree,form</field>
+        </record>
+
+        <!--sales reciept-->
+        <record id="action_move_out_receipt_type" model="ir.actions.act_window">
+            <field name="name">Receipts</field>
+            <field name="res_model">account.move</field>
+            <field name="view_mode">tree,kanban,form</field>
+            <field name="view_id" ref="view_invoice_tree"/>
+            <field name="search_view_id" ref="view_account_invoice_filter"/>
+            <field name="domain">[('type', '=', 'out_receipt')]</field>
+            <field name="context">{'default_type': 'out_receipt'}</field>
+            <field name="help" type="html">
+                <p class="o_view_nocontent_smiling_face">
+                    Create a new sales receipt
+                </p>
+                <p>
+                    When the sale receipt is confirmed, you can record the customer
+                    payment related to this sales receipt.
+                </p>
+            </field>
+        </record>
+
         <record id="retail_sale_order_form" model="ir.ui.view">
             <field name="name">sale.order</field>
             <field name="model">sale.order</field>
@@ -19,6 +47,40 @@
                 <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit']" position="attributes">
                     <attribute name="attrs">{'readonly': [('edit', '=', 0)]}</attribute>
                 </xpath>
+            </field>
+        </record>
+
+        <record model="ir.ui.view" id="product_pricelist_view_search">
+            <field name="name">product.pricelist.search</field>
+            <field name="model">product.pricelist</field>
+            <field name="arch" type="xml">
+                <search string="Products Price Search">
+                    <field name="name" string="Products Price"/>
+                    <field name="currency_id" groups="base.group_multi_currency"/>
+                    <filter string="Archived" name="inactive" domain="[('active','=',False)]"/>
+                </search>
+            </field>
+        </record>
+
+        <record id="product_pricelist_action2" model="ir.actions.act_window">
+            <field name="name">Pricelists</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">product.pricelist</field>
+            <field name="view_mode">tree,kanban,form</field>
+            <field name="search_view_id" ref="product_pricelist_view_search"/>
+            <field name="context">{"default_base":'list_price'}</field>
+            <field name="help" type="html">
+                <p class="o_view_nocontent_smiling_face">
+                    Create a new pricelist
+                </p>
+                <p>
+                    A price is a set of sales prices or rules to compute the price of sales order lines based on
+                    products, product categories, dates and ordered quantities.
+                    This is the perfect tool to handle several pricings, seasonal discounts, etc.
+                </p>
+                <p>
+                    You can assign pricelists to your customers or select one when creating a new sales quotation.
+                </p>
             </field>
         </record>
     </data>
