--- a/views/menu.xml
+++ b/views/menu.xml
@@ -1,7 +1,7 @@
 <odoo>
     <data>
 
-        <menuitem id="retail_menu_root" name="Retail"/>
+        <menuitem id="retail_menu_root" name="Retail"  web_icon="custom_retail,static/description/icon.png"/>
 
         <menuitem id="stock_menu" name="Stock" parent="retail_menu_root" sequence="1"/>
         <menuitem id="warehouse_menu" name="Warehouse" parent="stock_menu" sequence="1" action="action_warehouse_form"/>
