--- a/views/partner.xml
+++ b/views/partner.xml
@@ -7,11 +7,11 @@
             <field name="inherit_id" ref="base.view_partner_form"/>
             <field name="arch" type="xml">
 
-                <xpath expr="//div[@name='button_box']" position="inside">
-                    <button name="accounting_pdf_reports.action_account_partner_ledger_menu"
-                            icon="fa-pencil-square-o" type="action" string="Partner Ledger">
-                    </button>
-                </xpath>
+<!--                <xpath expr="//div[@name='button_box']" position="inside">-->
+<!--                    <button name="accounting_pdf_reports.action_account_partner_ledger_menu"-->
+<!--                            icon="fa-pencil-square-o" type="action" string="Partner Ledger">-->
+<!--                    </button>-->
+<!--                </xpath>-->
 
             </field>
         </record>
